# student-performance-prediction

./: Dockerfile  README.md  project-documentation.md  pyproject.toml
docs/: project-documentation.md
src/student_performance_prediction/: main.ipynb  predict.py  serve.py  test.py  train.py
