[project]
name = "student-performance-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.121.1",
    "scikit-learn==1.7.2",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel==7.1.0",
    "xgboost==3.1.1",
    "matplotlib==3.10.7",
    "requests==2.32.5",
    "pandas==2.3.3",
    "numpy==2.3.4",
    "tdqm==0.0.1",
]
